# decklify_server

./: .gitignore  Decklify.spec  README.md  deck!t.spec  installer.iss  pyproject.toml
.github/workflows/: windows-build.yml
app/: main.py  mdns.py  paths.py  registry.py  server.py  tray.py  utils.py
app/static/: app.js  index.html  style.css
assets/: dummy-config.json
decklify-ui/: README.md  index.html  package.json  vite.config.ts
decklify-ui/src/: App.svelte  types.ts
decklify-ui/src/lib/: api.ts
decklify-ui/src/lib/components/: DeckGrid.svelte  PageSettingsPanel.svelte  PageStrip.svelte  TileCell.svelte  TileEditorPanel.svelte  TopBar.svelte
decklify-ui/src/lib/state/: layout.svelte.ts
examples/: README.md
examples/config/: config.json
examples/macros/apps/: run_battlenet.ahk  run_brave.ahk  run_notepad.ahk  run_powershell.ahk  run_spotify.ahk  run_steam.ahk
examples/macros/discord/: mute_headphones_discord.ahk  mute_mic_discord.ahk
examples/macros/media/: play_pause_media.ahk
examples/macros/shortcuts/: Spotify.lnk
